more verbose server names

--- a/dwh-update/local_smtp_settings.conf
+++ b/dwh-update/local_smtp_settings.conf
@@ -1,5 +1,5 @@
-smtphost=smtp.aktin.com
+smtphost=ihr.smtp.server.de
 smtpport=465
-smtpuser=test.user@aktin.com
+smtpuser=aktin.user@ihre-domain.de
 smtppass=secure3Password
 usessl=true
