--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -16,6 +16,11 @@
             <version>0.6-SNAPSHOT</version>
             <type>ear</type>
         </dependency>
+        <dependency>
+            <groupId>org.aktin</groupId>
+            <artifactId>cda-ontology</artifactId>
+            <version>0.6-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
