--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -9,15 +9,9 @@
 	<artifactId>dwh-update</artifactId>
 	<version>0.5-0.6</version>
 
-	<properties>
-		<!-- version number to use in scripts -->
-		<wildfly.version>9.0.2.Final</wildfly.version>
-		<!-- old ear version which will be replaced by the script -->
-		<ear.old.version>0.5-SNAPSHOT</ear.old.version>
-	</properties>
-
     <dependencies>
-	<!-- dependencies will be referenced from the script files -->
+	<!-- dependency versions will be referenced by the properties 
+	     specified in the properties section -->
 	<!-- first dependency must be the EAR file -->
         <dependency>
             <groupId>org.aktin</groupId>
@@ -32,6 +26,16 @@
             <version>0.6-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+	<properties>
+		<!-- version number to use in scripts -->
+		<wildfly.version>9.0.2.Final</wildfly.version>
+		<!-- old ear version which will be replaced by the script -->
+		<ear.old.version>0.5-SNAPSHOT</ear.old.version>
+		<ear.version>${project.dependencies[0].version}</ear.version>
+		<ontology.version>${project.dependencies[1].version}</ontology.version>
+	</properties>
+
 
 
     <build>
