--- a/dwh-install/pom.xml
+++ b/dwh-install/pom.xml
@@ -7,25 +7,25 @@
 
 	<groupId>org.aktin</groupId>
 	<artifactId>dwh-install</artifactId>
-	<version>0.1beta</version>
+	<version>0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.installer</groupId>
 		<artifactId>installer</artifactId>
-		<version>0.1beta</version>
+		<version>0.1-SNAPSHOT</version>
 	</parent>
 	
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin</groupId>
 			<artifactId>dwh-j2ee</artifactId>
-			<version>0.6beta</version>
+			<version>0.6-SNAPSHOT</version>
 			<type>ear</type>
 		</dependency>
 		<dependency>
 			<groupId>org.aktin</groupId>
 			<artifactId>cda-ontology</artifactId>
-			<version>0.6beta</version>
+			<version>0.6-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
