--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>org.aktin</groupId>
 	<artifactId>dwh-update</artifactId>
-	<version>0.5-0.6beta</version>
+	<version>0.6-0.6-SNAPSHOT</version>
 
     <dependencies>
 	<!-- dependency versions will be referenced by the properties 
@@ -16,14 +16,14 @@
         <dependency>
             <groupId>org.aktin</groupId>
             <artifactId>dwh-j2ee</artifactId>
-            <version>0.6beta</version>
+            <version>0.6-SNAPSHOT</version>
             <type>ear</type>
         </dependency>
         <!-- second dependency must be the ontology -->
         <dependency>
             <groupId>org.aktin</groupId>
             <artifactId>cda-ontology</artifactId>
-            <version>0.6beta</version>
+            <version>0.6-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
