--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>org.aktin</groupId>
 	<artifactId>dwh-update</artifactId>
-	<version>0.6-0.6-SNAPSHOT</version>
+	<version>0.5-0.6</version>
 
     <dependencies>
 	<!-- dependency versions will be referenced by the properties 
