--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -9,6 +9,12 @@
 	<artifactId>dwh-update</artifactId>
 	<version>0.5-0.6</version>
 
+	<parent>
+		<groupId>org.aktin.installer</groupId>
+		<artifactId>installer</artifactId>
+		<version>0.1-SNAPSHOT</version>
+	</parent>
+
     <dependencies>
 	<!-- dependency versions will be referenced by the properties 
 	     specified in the properties section -->
