--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>org.aktin</groupId>
 	<artifactId>dwh-update</artifactId>
-	<version>0.5-0.6</version>
+	<version>0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.installer</groupId>
@@ -54,6 +54,7 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
+				<appendAssemblyId>false</appendAssemblyId>
                             <descriptors>
                                 <descriptor>src/assembly/package.xml</descriptor>
                             </descriptors>
