--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -7,12 +7,12 @@
 
 	<groupId>org.aktin</groupId>
 	<artifactId>dwh-update</artifactId>
-	<version>0.2beta</version>
+	<version>0.2-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.installer</groupId>
 		<artifactId>installer</artifactId>
-		<version>0.2beta</version>
+		<version>0.2-SNAPSHOT</version>
 	</parent>
 
     <dependencies>
@@ -22,14 +22,14 @@
         <dependency>
             <groupId>org.aktin</groupId>
             <artifactId>dwh-j2ee</artifactId>
-            <version>0.6beta</version>
+            <version>0.6-SNAPSHOT</version>
             <type>ear</type>
         </dependency>
         <!-- second dependency must be the ontology -->
         <dependency>
             <groupId>org.aktin</groupId>
             <artifactId>cda-ontology</artifactId>
-            <version>0.6beta</version>
+            <version>0.6-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
