--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,22 @@
 		<module>dwh-install</module>
 		<module>dwh-update</module>
 	</modules>
+	<dependencyManagement>
+		<!-- dependency version+scope inherited by child projects -->
+		<dependencies>
+			<dependency>
+			    <groupId>org.aktin</groupId>
+			    <artifactId>dwh-j2ee</artifactId>
+			    <version>0.6-SNAPSHOT</version>
+			    <type>ear</type>
+			</dependency>
+			<!-- second dependency must be the ontology -->
+			<dependency>
+			    <groupId>org.aktin</groupId>
+			    <artifactId>cda-ontology</artifactId>
+			    <version>0.6-SNAPSHOT</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 </project>
