--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -7,12 +7,12 @@
 
 	<groupId>org.aktin</groupId>
 	<artifactId>dwh-update</artifactId>
-	<version>0.2-SNAPSHOT</version>
+	<version>0.2rc</version>
 
 	<parent>
 		<groupId>org.aktin.installer</groupId>
 		<artifactId>installer</artifactId>
-		<version>0.2-SNAPSHOT</version>
+		<version>0.2rc</version>
 	</parent>
 
     <dependencies>
