--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<name>AKTIN : DWH Updater</name>
+	<name>AKTIN : DWH Server : Updater</name>
 
 	<packaging>pom</packaging>
 
-	<groupId>org.aktin</groupId>
+	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-update</artifactId>
 	<version>0.3-SNAPSHOT</version>
 
 	<parent>
-		<groupId>org.aktin.installer</groupId>
-		<artifactId>installer</artifactId>
+		<groupId>org.aktin.dwh</groupId>
+		<artifactId>server</artifactId>
 		<version>0.3-SNAPSHOT</version>
 	</parent>
 
