--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
 	
-	<groupId>org.aktin.installer</groupId>
-	<artifactId>installer</artifactId>
+	<groupId>org.aktin.dwh</groupId>
+	<artifactId>server</artifactId>
 	<version>0.3-SNAPSHOT</version>
   
-	<name>AKTIN : Installation</name>
-	<description>AKTIN Software</description>
+	<name>AKTIN : DWH Server</name>
+	<description>Installation and updates for the AKTIN DWH Server</description>
 
 	<parent>
 		<groupId>org.aktin</groupId>
