--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	
 	<groupId>org.aktin.installer</groupId>
 	<artifactId>installer</artifactId>
-	<version>0.2</version>
+	<version>0.2-SNAPSHOT</version>
   
 	<name>AKTIN : Installation</name>
 	<description>AKTIN Software</description>
@@ -17,7 +17,6 @@
 	
 	<scm>
 		<developerConnection>scm:git:git@gitlab.uni-oldenburg.de:AKTIN/vagrant-vm.git</developerConnection>
-		<tag>installer-0.2</tag>
 	</scm>
 
 	<modules>
@@ -30,7 +29,7 @@
 			<dependency>
 			    <groupId>org.aktin</groupId>
 			    <artifactId>dwh-j2ee</artifactId>
-			    <version>0.6</version>
+			    <version>0.6.1</version>
 			    <type>ear</type>
 			</dependency>
 			<!-- second dependency must be the ontology -->
