--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	
 	<groupId>org.aktin.installer</groupId>
 	<artifactId>installer</artifactId>
-	<version>0.2-SNAPSHOT</version>
+	<version>0.2.1</version>
   
 	<name>AKTIN : Installation</name>
 	<description>AKTIN Software</description>
@@ -17,7 +17,8 @@
 	
 	<scm>
 		<developerConnection>scm:git:git@gitlab.uni-oldenburg.de:AKTIN/vagrant-vm.git</developerConnection>
-	</scm>
+	  <tag>installer-0.2.1</tag>
+  </scm>
 
 	<modules>
 		<module>dwh-install</module>
