dwh-installer release update: updated installer to 0.6

--- a/dwh-install/pom.xml
+++ b/dwh-install/pom.xml
@@ -38,6 +38,19 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>de.sekmi.histream.maven</groupId>
+                        <artifactId>histream-maven-plugin</artifactId>
+                        <version>0.9.3</version>
+                        <executions>
+                            <execution>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>dependency-properties</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
                         <executions>
                             <execution>
@@ -64,6 +77,19 @@
         	<id>aktin-installer</id>
         	<build>
         		<plugins>
+                    <plugin>
+                        <groupId>de.sekmi.histream.maven</groupId>
+                        <artifactId>histream-maven-plugin</artifactId>
+                        <version>0.9.3</version>
+                        <executions>
+                            <execution>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>dependency-properties</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
         			<plugin>
         				<artifactId>maven-assembly-plugin</artifactId>
         				<executions>
