--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,14 @@
 			<dependency>
 			    <groupId>org.aktin</groupId>
 			    <artifactId>dwh-j2ee</artifactId>
-			    <version>0.6.2</version>
+			    <version>0.6.3rc1</version>
 			    <type>ear</type>
 			</dependency>
 			<!-- second dependency must be the ontology -->
 			<dependency>
 			    <groupId>org.aktin</groupId>
 			    <artifactId>cda-ontology</artifactId>
-			    <version>0.6.2</version>
+			    <version>0.6.3rc1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
