--- a/aktin-cdd/src/assembly/package.xml
+++ b/aktin-cdd/src/assembly/package.xml
@@ -1,5 +1,6 @@
 <assembly>
 	<!-- Specifies that our binary distribution is a tar.gz package -->
+    <id>default</id>
 	<formats>
 		<format>dir</format>
         <!--zip-->
@@ -10,10 +11,14 @@
 	<!-- Add dependencies for the J2EE server to the /packages directory -->
 	<dependencySets>
 		<dependencySet>
-			<outputDirectory>/packages</outputDirectory>
+			<outputDirectory>packages</outputDirectory>
 			<useProjectArtifact>false</useProjectArtifact>
 			<unpack>false</unpack>
 			<scope>runtime</scope>
+            <excludes>
+                <exclude>org.aktin:cda-ontology</exclude>
+                <exclude>org.aktin:dwh-j2ee</exclude>
+            </excludes>
 		</dependencySet>
 	</dependencySets>
 
@@ -33,17 +38,17 @@
                 <include>aktin.*</include>
                 <include>default.preseed</include>
             </includes>
-            <outputDirectory>/profiles</outputDirectory>
+            <outputDirectory>profiles</outputDirectory>
             <filtered>false</filtered>
         </fileSet>
         <fileSet>
             <directory>src/main/resources/scdd-tools/build</directory>
-            <outputDirectory>/tools</outputDirectory>
+            <outputDirectory>tools</outputDirectory>
             <filtered>false</filtered>
         </fileSet>
         <fileSet>
             <directory>packages</directory>
-            <outputDirectory>/packages</outputDirectory>
+            <outputDirectory>packages</outputDirectory>
             <filtered>false</filtered>
         </fileSet>
     </fileSets>
