updated main pom and scripts for extract and download

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<module>dwh-j2ee</module>
 		<module>dwh-install</module>
 		<module>dwh-update</module>
+		<module>aktin-cdd</module>
 	</modules>
 	<dependencyManagement>
 		<!-- dependency version+scope inherited by child projects -->
