--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,10 @@
 		<module>dwh-j2ee</module>
 		<module>dwh-install</module>
 		<module>dwh-update</module>
+		<!--
+		TODO fix ccd integration
 		<module>aktin-cdd</module>
+		-->
 	</modules>
 	<dependencyManagement>
 		<!-- dependency version+scope inherited by child projects -->
