--- a/dwh-update/src/main/scripts/0.7/aktin.properties
+++ b/dwh-update/src/main/scripts/0.7/aktin.properties
@@ -5,12 +5,10 @@ local.l=Entenhausen
 local.s=Entenstaat
 local.c=Entenland
 local.email=admin@klinik-entenhausen.el
-# Time-Zone ID (used for calculating time differences with periods like plus 1 month)
 local.tz=Europe/Berlin
-rscript.binary=/usr/bin/rScript.exe
+rscript.binary=/usr/bin/Rscript
 # needed for read/write access to the i2b2 database
 i2b2.project=AKTIN
-# TODO ist das unten richtig???
 i2b2.datasource.crc=java:/QueryToolDemoDS
 # needed for i2b2 authentication and user management
 i2b2.service.pm=http://localhost:8080/i2b2/services/PMService/
