--- a/dwh-update/src/main/scripts/0.7/aktin.properties
+++ b/dwh-update/src/main/scripts/0.7/aktin.properties
@@ -18,7 +18,7 @@ report.temp.path=/var/tmp/report-temp
 report.archive.path=/var/lib/aktin/report-archive
 broker.data.path=/var/lib/aktin/broker
 broker.archive.path=/var/lib/aktin/broker-archive
-broker.uris=http://localhost:8080/lalal
+broker.uris=https://broker.aktin.org/broker/
 db.datasource=java:jboss/datasources/AktinDS
 email.session=java:jboss/mail/AktinMailSession
 wildfly.management.url=http://localhost:19990/management
