broker.keys property added

--- a/dwh-update/src/main/scripts/0.7/aktin.properties
+++ b/dwh-update/src/main/scripts/0.7/aktin.properties
@@ -19,6 +19,7 @@ report.archive.path=/var/lib/aktin/report-archive
 broker.data.path=/var/lib/aktin/broker
 broker.archive.path=/var/lib/aktin/broker-archive
 broker.uris=https://broker.aktin.org/broker/
+broker.keys=XXXXX
 db.datasource=java:jboss/datasources/AktinDS
 email.session=java:jboss/mail/AktinMailSession
 wildfly.management.url=http://localhost:19990/management
