aktin.properties settings

--- a/dwh-update/src/main/scripts/0.7/aktin.properties
+++ b/dwh-update/src/main/scripts/0.7/aktin.properties
@@ -1,10 +1,17 @@
-local.cn=Zentrale Notaufnahme Entenhausen
-local.o=Klinik Entenhausen
+# Currently not used, may be changed (Name of the installation)
+local.cn=AKTIN DWH
+# Used in AKTIN reports, should contain the name of the Organization (Hospital)
+local.o=Ev. Klinikum Beispielhausen
+# Used in AKTIN reports, should contain the name of the Unit (Notaufnahme, Rettungsstelle, ZNA, etc.)
 local.ou=Notaufnahme
-local.l=Entenhausen
-local.s=Entenstaat
-local.c=Entenland
-local.email=admin@klinik-entenhausen.el
+# Town / Stadt
+local.l=Beispielhausen
+# State / Bundesland
+local.s=Niedersachen
+# Country / Staat
+local.c=Deutschland
+# default E-Mail-Address for notifications, reports (non technical)
+local.email=zna-contact@klinikum-beipielhausen.de
 local.tz=Europe/Berlin
 rscript.binary=/usr/bin/Rscript
 # needed for read/write access to the i2b2 database
@@ -18,7 +25,10 @@ report.temp.path=/var/tmp/report-temp
 report.archive.path=/var/lib/aktin/report-archive
 broker.data.path=/var/lib/aktin/broker
 broker.archive.path=/var/lib/aktin/broker-archive
-broker.uris=http://localhost:8080/lalal
+broker.uris=http://broker.aktin.org/broker/
+broker.intervals=P15M
+# Used in AKTIN to connect to the broker, you can get your API key from it-support@aktin.org
+broker.keys=XXXyourapikeyXXX
 db.datasource=java:jboss/datasources/AktinDS
 email.session=java:jboss/mail/AktinMailSession
 wildfly.management.url=http://localhost:19990/management
