--- a/dwh-update/src/main/scripts/0.7/aktin.properties
+++ b/dwh-update/src/main/scripts/0.7/aktin.properties
@@ -26,7 +26,7 @@ report.archive.path=/var/lib/aktin/report-archive
 broker.data.path=/var/lib/aktin/broker
 broker.archive.path=/var/lib/aktin/broker-archive
 broker.uris=https://broker.aktin.org/broker/
-broker.intervals=P15M
+broker.intervals=PT15M
 # Used in AKTIN to connect to the broker, you can get your API key from it-support@aktin.org
 broker.keys=XXXyourapikeyXXX
 db.datasource=java:jboss/datasources/AktinDS
