--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -11,7 +11,8 @@ local.s=Niedersachen
 # Country / Staat
 local.c=Deutschland
 # default E-Mail-Address for notifications, reports (non technical)
-local.email=zna-contact@klinikum-beipielhausen.de
+# local.email=zna-contact@klinikum-beipielhausen.de
+local.email=tingyan.xu@oul.de
 local.tz=Europe/Berlin
 rscript.binary=/usr/bin/Rscript
 # needed for read/write access to the i2b2 database
