increased deployment time, removed password

--- a/dwh-update/src/main/scripts/generic/email.config
+++ b/dwh-update/src/main/scripts/generic/email.config
@@ -14,8 +14,8 @@ smtpport=587
 smtpuser=aktin-test@web.de
 #
 #     password for authentication
-#
-smtppass=hUzb/ysX
+#	
+smtppass=XXXpasswordXXX
 #
 #     email address (from)
 #
