--- a/dwh-update/src/main/scripts/generic/email.config
+++ b/dwh-update/src/main/scripts/generic/email.config
@@ -5,9 +5,13 @@
 #
 smtphost=smtp.web.de
 #
-#     mail server port, e.g. 465 (SSL) or 587 (TLS)
+#     mail server port, e.g. 465 (SSL) or 587 (TLS), or 25 (local server)
 #
 smtpport=587
+#
+#     mail server has authentification. False if no login is needed for the mail server. 
+# 
+auth=true
 #
 #     user name for authentication
 #
