email update and pom and site update

--- a/dwh-update/src/main/scripts/generic/email.config
+++ b/dwh-update/src/main/scripts/generic/email.config
@@ -5,11 +5,11 @@
 #
 smtphost=smtp.web.de
 #
-#     mail server port, e.g. 465 (SSL) or 587 (TLS), or 25 (local server)
+#     mail server port, e.g. 465 (SSL) or 587 (TLS), or 25 (no auth)
 #
 smtpport=587
 #
-#     mail server has authentification. False if no login is needed for the mail server. 
+#     mail server authentification. False for no login is needed for the mail server.
 # 
 auth=true
 #
