--- a/dwh-install/src/main/resources/i2b2_install/build.properties
+++ b/dwh-install/src/main/resources/i2b2_install/build.properties
@@ -16,22 +16,22 @@ i2b2.version=1706
 #packages
 # packages.dir=/opt/aktin/packages/
 axis2.zip.name=axis2-1.6.3-war.zip
-axis2.zip.url=https://cloudstorage.uni-oldenburg.de/index.php/s/67OY8vh6BSZq56w/download
+axis2.zip.url=https://cloudstorage.uni-oldenburg.de/s/67OY8vh6BSZq56w/download
 axis2.patch.zip.name=jboss-deployment-i2b2war-WEB-INF.zip
-axis2.patch.zip.url=https://cloudstorage.uni-oldenburg.de/index.php/s/0gRdGNsseGM5Gf9/download
+axis2.patch.zip.url=https://cloudstorage.uni-oldenburg.de/s/0gRdGNsseGM5Gf9/download
 i2b2.db.name=i2b2createdb-1706.zip
-i2b2.db.url=https://cloudstorage.uni-oldenburg.de/index.php/s/x1caQ5R0KUSwwVZ/download
+i2b2.db.url=https://cloudstorage.uni-oldenburg.de/s/x1caQ5R0KUSwwVZ/download
 i2b2.core.name=i2b2core-src-1706.zip
-i2b2.core.url=https://cloudstorage.uni-oldenburg.de/index.php/s/aWQcldqMgKlqxPC/download
+i2b2.core.url=https://cloudstorage.uni-oldenburg.de/s/aWQcldqMgKlqxPC/download
 i2b2.webclient.name=i2b2webclient-1706.zip
-i2b2.webclient.url=https://cloudstorage.uni-oldenburg.de/index.php/s/aaLhFTfemXBKsQA/download
+i2b2.webclient.url=https://cloudstorage.uni-oldenburg.de/s/aaLhFTfemXBKsQA/download
 jboss.zip.name=wildfly-9.0.2.Final.zip
-jboss.zip.url=https://cloudstorage.uni-oldenburg.de/index.php/s/l8o6SM3Hueaxpen/download
+jboss.zip.url=https://cloudstorage.uni-oldenburg.de/s/l8o6SM3Hueaxpen/download
 db.driver.jar=postgresql-9.2-1002.jdbc4.jar
-db.driver.url=https://cloudstorage.uni-oldenburg.de/index.php/s/PkC9jJiUeZ8ILBQ/download
+db.driver.url=https://cloudstorage.uni-oldenburg.de/s/PkC9jJiUeZ8ILBQ/download
 # TODO solve with mvn dependencies -> pom. remove download from ant and installer 
 dwh.j2ee.ear=dwh-j2ee-*.ear
-# dwh.j2ee.ear.url=https://cloudstorage.uni-oldenburg.de/index.php/s/nh1D9O621kXN0Kq/download
+# dwh.j2ee.ear.url=https://cloudstorage.uni-oldenburg.de/s/nh1D9O621kXN0Kq/download
 
 # ant.installdata.dir=/opt/aktin/temp_install/
 # i2b2.src.dir=/opt/aktin/temp_install/i2b2_src
