--- a/dwh-install/pom.xml
+++ b/dwh-install/pom.xml
@@ -7,19 +7,19 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-install</artifactId>
-	<version>0.8-SNAPSHOT</version>
+	<version>0.7rc3</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>0.8-SNAPSHOT</version>
+		<version>0.7rc3</version>
 	</parent>
 	
 	<dependencies>
 		<dependency>
 		    <groupId>org.aktin.dwh</groupId>
 		    <artifactId>dwh-update</artifactId>
-		    <version>0.8-SNAPSHOT</version>
+		    <version>0.7rc3</version>
 		    <type>tar.gz</type>
 		</dependency>
 		<dependency>
