--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<!-- specifies the package and source version to which the site refers to -->
 		<dwhJ2EEVersion>0.7.1</dwhJ2EEVersion>
 		<dwhOntologyVersion>0.7</dwhOntologyVersion>
+		<dwhImportVersion>0.7</dwhImportVersion>
 		<releaseRepoUrl>http://www.aktin.org/software/repo</releaseRepoUrl>
 		<!-- encoding stuff -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
