added delete postgres file, added patching for aktin.properties

--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -15,7 +15,7 @@ local.email=zna-contact@klinikum-beipielhausen.de
 local.tz=Europe/Berlin
 rscript.binary=/usr/bin/Rscript
 # needed for read/write access to the i2b2 database
-i2b2.project=AKTIN
+i2b2.project=Demo
 i2b2.datasource.crc=java:/QueryToolDemoDS
 # needed for i2b2 authentication and user management
 i2b2.service.pm=http://localhost:9090/i2b2/services/PMService/
