--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -13,6 +13,9 @@ local.c=Deutschland
 # default E-Mail-Address for notifications, reports (non technical); multiple Adresses possible (comma separated in one line)
 local.email=zna-contact@klinikum-beipielhausen.de
 local.tz=Europe/Berlin
+# Language tag according to IETF BCP 47. If not defined, the system language will be used.
+local.language=de-DE
+# location of the R standalone executable
 rscript.binary=/usr/bin/Rscript
 # needed for read/write access to the i2b2 database
 i2b2.project=AKTIN
