dwh-updater fix

--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -13,6 +13,7 @@ local.c=Deutschland
 # default E-Mail-Address for notifications, reports (non technical); multiple Adresses possible (comma separated in one line)
 local.email=zna-contact@klinikum-beipielhausen.de
 local.tz=Europe/Berlin
+# local.server.url=http://IhrServerUrlOderIp:PORT/
 rscript.binary=/usr/bin/Rscript
 # needed for read/write access to the i2b2 database
 i2b2.project=Demo
