--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 
 	<properties>
 		<!-- specifies the package and source version to which the site refers to -->
-		<dwhJ2EEVersion>0.7.2</dwhJ2EEVersion>
-		<dwhOntologyVersion>0.7</dwhOntologyVersion>
+		<dwhJ2EEVersion>0.8-SNAPSHOT</dwhJ2EEVersion>
+		<dwhOntologyVersion>0.8-SNAPSHOT</dwhOntologyVersion>
 		<dwhImportVersion>0.7</dwhImportVersion>
 		<releaseRepoUrl>http://www.aktin.org/software/repo</releaseRepoUrl>
 		<!-- encoding stuff -->
@@ -46,12 +46,12 @@
 			<dependency>
 			    <groupId>org.aktin</groupId>
 			    <artifactId>cda-ontology</artifactId>
-			    <version>0.7</version>
+			    <version>0.8-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.aktin.dwh</groupId>
 				<artifactId>dwh-j2ee</artifactId>
-				<version>0.7.2</version>
+				<version>0.8-SNAPSHOT</version>
 				<type>ear</type>
 			</dependency>
 		</dependencies>
