--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -15,6 +15,7 @@ local.email=zna-contact@klinikum-beipielhausen.de
 local.tz=Europe/Berlin
 # Language tag according to IETF BCP 47. If not defined, the system language will be used.
 local.language=de-DE
+# Korrektur der Server URL (der Emails)
 # local.server.url=http://IhrServerUrlOderIp/
 # location of the R standalone executable
 rscript.binary=/usr/bin/Rscript
