--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-update</artifactId>
-	<version>8rc3</version>
+	<version>0.8-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-j2ee</artifactId>
-			<version>0.8rc3</version>
+			<version>0.8</version>
 			<type>ear</type>
 		</dependency>
 		<dependency>
